📝 Publish "Building a Language Server"

--- a/src/content/blog/2024/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
+++ b/src/content/blog/2024/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
@@ -3,8 +3,8 @@ title: 'Connecting ANTLR to CodeMirror 6: Building a Language Server'
 slug: connecting-antlr-to-codemirror-6-building-a-language-server
 date: 2024-02-15
 type: Post
-status: Draft
-description: How to connect ANTLR to CodeMirror
+status: Published
+description: How to build a language server using an ANTLR grammar–featuring Zephyr, my toy language.
 image:
   alt: a group of tall buildings under a cloudy blue sky
   source: ./a-group-of-tall-buildings-under-a-cloudy-blue-sky.jpg
